Don't define X_NOT_STDC_ENV on Solaris x86. Bugzilla #3158:     https://bugs.freedesktop.org/show_bug.cgi?id=3158 Patch #2588:     https://bugs.freedesktop.org/attachment.cgi?id=2588 (Henry Zhao, Sun     Microsystems)